--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify pages/index.js -t babelify -o bundle.js",
-    "dev": "npx watchify pages/index.js -t babelify -o bundle.js"
+    "build": "browserify pages/index.js -t babelify -t browserify-css -o bundle.js",
+    "dev": "npx watchify pages/index.js -t babelify -t browserify-css -o bundle.js"
   },
   "babel": {
     "presets": [
@@ -33,7 +33,10 @@
     "babel": "^6.23.0",
     "babelify": "^10.0.0",
     "browserify": "^17.0.1",
+    "browserify-css": "^0.15.0",
+    "css-loader": "^7.1.2",
     "react-router-dom": "^6.27.0",
+    "style-loader": "^4.0.0",
     "watchify": "^4.0.0"
   },
   "browserify": {
