--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     ]
   },
   "dependencies": {
+    "@react-email/components": "^0.1.0",
     "babel": "^6.23.0",
     "browserify": "^17.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^4.6.0"
   }
 }
