--- a/react-app/package.json
+++ b/react-app/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.1.0",
+    "axios": "^1.10.0",
     "babel": "^6.23.0",
     "browserify": "^17.0.0",
     "react": "^18.3.1",
