--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,13 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify pages/index.js -t babelify -t browserify-css -o bundle.js",
-    "dev": "npx watchify pages/index.js -t babelify -t browserify-css -o bundle.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack serve --open"
   },
   "babel": {
     "presets": [
-      "@babel/preset-react",
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "browsers": [
+              "> 1%",
+              "last 2 versions"
+            ]
+          },
+          "modules": "commonjs"
+        }
+      ],
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-modules-commonjs"
     ]
   },
   "repository": {
@@ -26,31 +40,22 @@
   "devDependencies": {
     "@babel/cli": "^7.25.7",
     "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "babel": "^6.23.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.1",
-    "browserify-css": "^0.15.0",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "react-router-dom": "^6.27.0",
     "style-loader": "^4.0.0",
-    "watchify": "^4.0.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "@react-email/components": "^0.1.0",
     "axios": "^1.10.0",
-    "babel": "^6.23.0",
-    "browserify": "^17.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "resend": "^4.6.0"
+    "react-dom": "^18.3.1"
   }
 }
