--- a/react-app/package.json
+++ b/react-app/package.json
@@ -50,7 +50,8 @@
     "react-router-dom": "^6.27.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
     "@react-email/components": "^0.1.0",
