--- a/react-app/package.json
+++ b/react-app/package.json
@@ -55,8 +55,13 @@
   },
   "dependencies": {
     "@react-email/components": "^0.1.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
+    "html-webpack-plugin": "^5.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "resolutions": {
+    "react": "^18.3.1"
   }
 }
