--- a/react-app/package.json
+++ b/react-app/package.json
@@ -58,6 +58,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "html-webpack-plugin": "^5.6.3",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
