--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "*": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "builds": [
     {
       "src": "index.js",
