--- a/react-app/package.json
+++ b/react-app/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.1.0",
+    "@supabase/supabase-js": "^2.76.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "html-webpack-plugin": "^5.6.3",
